--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
         <div appDropdown class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">To Shopping List</a></li>
+                <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -30,7 +30,7 @@
         <ul class="list-group">
             <li class="list-group-item"
                 *ngFor="let ingredient of recipe.ingredients">
-            {{ ingredient.name }} - {{ ingredient.amount }}
+                {{ ingredient.name }} - {{ ingredient.amount }}
             </li>
         </ul>
     </div>
