--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
 
         <div class="navbar-collapse" [class.collapse]="isCollapsed" (window:resize)="isCollapsed = true">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-                <li><a href="#" (click)="onSelect('shopping')">Shopping List</a></li>
+                <li><a routerLink="/recipes">Recipes</a></li>
+                <li><a routerLink="/shopping-list">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li appDropdown class="dropdown">
