--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -43,14 +43,14 @@
             </div>
             <!-- ingredients -->
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12" formArrayName="ingredients">
                     <label for="description">Ingredients</label>
-                    <div class="row">
+                    <div class="row single-ingredient" *ngFor="let ingredientCtrl of ingredientControls; let i = index" [formGroupName]="i">
                         <div class="col-xs-8">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="name">
                         </div>
                         <div class="col-xs-2">
-                            <input type="number" class="form-control">
+                            <input type="number" class="form-control" formControlName="amount">
                         </div>
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
