--- a/src/app/recipes/recipe-edit/recipe-edit.component.css
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.css
@@ -5,3 +5,13 @@ button + button {
 .single-ingredient {
     margin-bottom: 10px;
 }
+
+input.ng-invalid.ng-dirty, textarea.ng-invalid.ng-dirty,
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+    border: 1px solid red;
+}
+
+input.ng-invalid.ng-dirty:focus, textarea.ng-invalid.ng-dirty:focus,
+input.ng-invalid.ng-touched:focus, textarea.ng-invalid.ng-touched:focus {
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255,0,0,.6);
+}
