--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,19 +1,19 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <form>
+        <form #f="ngForm" (ngSubmit)="onSubmit(f)">
             <!-- E-mail -->
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input type="email" id="email" class="form-control">
+                <input type="email" id="email" class="form-control" ngModel name="email" required email>
             </div>
             <!-- Password -->
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" class="form-control">
+                <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
             </div>
             <!-- Buttons -->
             <div>
-                <button class="btn btn-primary" type="submit">{{ isLoginMode ? 'Login' : 'Sign Up' }}</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!f.valid">{{ isLoginMode ? 'Login' : 'Sign Up' }}</button>
                 |
                 <button class="btn btn-primary" type="button" (click)="onSwitchMode()">Switch to {{ isLoginMode ? 'Sign Up' : 'Login' }}</button>
             </div>
