--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,15 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+        <!-- error -->
+        <div class="alert alert-danger" *ngIf="error">
+            <p>{{ error }}</p>
+        </div>
+        <!-- loading -->
+        <div class="loadingContainer" *ngIf="isLoading">
+            <app-loading-spinner></app-loading-spinner>
+        </div>
+        <!-- form -->
+        <form #f="ngForm" (ngSubmit)="onSubmit(f)" *ngIf="!isLoading">
             <!-- E-mail -->
             <div class="form-group">
                 <label for="email">E-mail</label>
