--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,9 +1,10 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <!-- error -->
-        <div class="alert alert-danger" *ngIf="error">
+        <!-- <div class="alert alert-danger" *ngIf="error">
             <p>{{ error }}</p>
-        </div>
+        </div> -->
+        <app-alert [message]="error" *ngIf="error"></app-alert>
         <!-- loading -->
         <div class="loadingContainer" *ngIf="isLoading">
             <app-loading-spinner></app-loading-spinner>
