--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,7 +4,7 @@
         <!-- <div class="alert alert-danger" *ngIf="error">
             <p>{{ error }}</p>
         </div> -->
-        <app-alert [message]="error" *ngIf="error"></app-alert>
+        <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert>
         <!-- loading -->
         <div class="loadingContainer" *ngIf="isLoading">
             <app-loading-spinner></app-loading-spinner>
